fix wrapping issue on illustrations

--- a/style.css
+++ b/style.css
@@ -100,7 +100,6 @@ a {
 .image4 {
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
     width: 200px;
     height: 300px;
     text-align: center;
